Delete pages of all the modules is updated!!!

--- a/calculation_master/templates/calculation_master/calculation_confirm_delete.html
+++ b/calculation_master/templates/calculation_master/calculation_confirm_delete.html
@@ -5,7 +5,15 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3" >
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -34,8 +42,15 @@
                     <b> Name Of Driver: </b> <a class="float-right">{{ object.loss_in_diesel }}</a>
                     </li>
 
-        </ul>
+                </ul>
 
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
