--- a/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_form.html
+++ b/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Employee DailyBase Amount Form </h3>
+                <h4 align="center"> Employee DailyBase Amount Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
