--- a/expense_detail/templates/expense_detail/expense_confirm_delete.html
+++ b/expense_detail/templates/expense_detail/expense_confirm_delete.html
@@ -5,8 +5,14 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
-            <div>
+    <div class="row">
+
+        <div class="col-md-6">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
 
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
@@ -36,6 +42,21 @@
                     <b> Property Tax Expense: </b> <a class="float-right">{{ object.property_tax }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+        <div class="col-md-6">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Maintainenece Expense: </b> <a class="float-right">{{ object.maintainence_expense }}</a>
                     </li>
@@ -64,9 +85,15 @@
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
             </div>
 
-        </ul>
+    </div>
+
+    </div>
 
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
