--- a/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
+++ b/nozzlle_master/templates/nozzlle_master/nozzlle_confirm_delete.html
@@ -4,24 +4,43 @@
     <hr/>
     <form method="post">
     {% csrf_token %}
-     <ul>
-         <li class="list-group-item">
-             <b> Date: </b> <a class="float-right">{{ object.date }}</a>
-         </li>
 
-         <li class="list-group-item">
-             <b> Nozzlle Number: </b> <a class="float-right">{{ object.nozzlle_no }}</a>
-         </li>
 
-         <li class="list-group-item">
-             <b> Nozzlle Type: </b> <a class="float-right">{{ object.nozzlle_type }}</a>
-         </li>
+<div align="center">
 
-         <li class="list-group-item">
-             <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
-         </li>
+            <div class="col-md-6" align="left">
 
-     </ul>
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3" >
+
+                    <li class="list-group-item">
+                    <b> Date: </b> <a class="float-right">{{ object.date }}</a>
+                    </li>
+
+                     <li class="list-group-item">
+                     <b> Nozzlle Number: </b> <a class="float-right">{{ object.nozzlle_no }}</a>
+                     </li>
+
+                     <li class="list-group-item">
+                     <b> Nozzlle Type: </b> <a class="float-right">{{ object.nozzlle_type }}</a>
+                     </li>
+
+                     <li class="list-group-item">
+                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
+                     </li>
+
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
+
         <div align="center">
             <input type="submit" value="delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info" >cancel </a>
