--- a/suppliers_master/templates/suppliers_master/suppliers_confirm_delete.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_confirm_delete.html
@@ -5,7 +5,15 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -38,8 +46,15 @@
                     <b> Transportation Expense: </b> <a class="float-right">{{ object.transportation_expense }}</a>
                     </li>
 
-        </ul>
+                </ul>
 
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'suppliers_master-view' %}" class="btn btn-info">Cancel </a>
