--- a/creditors_master/templates/creditors_master/creditors_form.html
+++ b/creditors_master/templates/creditors_master/creditors_form.html
@@ -7,7 +7,7 @@
 
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title" textalign="center"> Creditors Entry Form </h3>
+                <h4 align="center"> Creditors Entry Form </h4>
               </div>
 
                 <!-- /.card-header -->
