--- a/creditors_payment/templates/creditors_payment/payment_confirm_delete.html
+++ b/creditors_payment/templates/creditors_payment/payment_confirm_delete.html
@@ -5,7 +5,15 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div class="row">
+
+        <div class="col-md-6">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -30,6 +38,22 @@
                     <b> Branch Name: </b> <a class="float-right">{{ object.branch_name }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
+
                     <li class="list-group-item">
                     <b> Cheque Number: </b> <a class="float-right">{{ object.cheque_no }}</a>
                     </li>
@@ -46,9 +70,15 @@
                     <b> Slip Number: </b> <a class="float-right">{{ object.slip_no }}</a>
                     </li>
 
+                </ul>
 
-        </ul>
+              </div>
 
+            </div>
+
+    </div>
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'creditors_payment-view' %}" class="btn btn-info">Cancel </a>
