--- a/creditors_payment/templates/creditors_payment/payment_form.html
+++ b/creditors_payment/templates/creditors_payment/payment_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Creditors Payment Form </h3>
+                <h4 align="center"> Creditors Payment Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
