--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_confirm_delete.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_confirm_delete.html
@@ -5,41 +5,66 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
 
                     <li class="list-group-item">
-                    <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master }}</a>
+                    <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master.creditors_master.company_name }}</a>
                     </li>
 
                     <li class="list-group-item">
-                    <b> Type Of Vehicle: </b> <a class="float-right">{{ object.nozzlle_master }}</a>
+                    <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master.vehicle_no }}</a>
                     </li>
 
                     <li class="list-group-item">
-                    <b> Vehicle Number: </b> <a class="float-right">{{ object.petrol_in_lit }}</a>
+                    <b> Nozzlle Numer: </b> <a class="float-right">{{ object.nozzlle_master }}</a>
                     </li>
 
-                    <li class="list-group-item">
-                    <b> Type Of Fuel: </b> <a class="float-right">{{ object.diesel_in_lit }}</a>
-                    </li>
+                    {% if object.nozzlle_master.nozzlle_type == 'petrol' %}
 
-                    <li class="list-group-item">
-                    <b> Name Of Driver: </b> <a class="float-right">{{ object.petrol_price }}</a>
-                    </li>
+                        <li class="list-group-item">
+                            <b> Total Litere petrol: </b> <a class="float-right">{{ object.petrol_in_lit }}</a>
+                        </li>
 
-                    <li class="list-group-item">
-                    <b> Name Of Driver: </b> <a class="float-right">{{ object.diesel_price }}</a>
-                    </li>
+                        <li class="list-group-item">
+                            <b> Price Of Petrol: </b> <a class="float-right">{{ object.petrol_price }}</a>
+                        </li>
+
+                    {% else %}
+
+                            <li class="list-group-item">
+                            <b> Total Litere Diesel: </b> <a class="float-right">{{ object.diesel_in_lit }}</a>
+                            </li>
+
+                            <li class="list-group-item">
+                            <b> Price Of Diesel: </b> <a class="float-right">{{ object.diesel_price }}</a>
+                            </li>
+
+                    {% endif %}
 
                     <li class="list-group-item">
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
-        </ul>
+                </ul>
 
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
