--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_form.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
                 <div class="card card-primary">
                 <div class="card-header">
-                <h3 class="card-title" textalign="center"> Creditors Transactions Entry Form </h3>
+                <h4 align="center"> Creditors Transactions Entry Form </h4>
               </div>
               <!-- /.card-header -->
 <hr/>
