--- a/employee_payment/templates/employee_payment/employee_p_confirm_delete.html
+++ b/employee_payment/templates/employee_payment/employee_p_confirm_delete.html
@@ -5,7 +5,15 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div class="row">
+
+        <div class="col-md-5">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -30,6 +38,21 @@
                     <b> Branch Name: </b> <a class="float-right">{{ object.branch_name }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+        <div class="col-md-5">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> IFSC Code: </b> <a class="float-right">{{ object.ifsc_code }}</a>
                     </li>
@@ -50,9 +73,14 @@
                     <b> Salary: </b> <a class="float-right">{{ object.salary }}</a>
                     </li>
 
+                </ul>
 
-        </ul>
+              </div>
 
+            </div>
+    </div>
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
