--- a/employee_payment/templates/employee_payment/employee_p_form.html
+++ b/employee_payment/templates/employee_payment/employee_p_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Employees Payment Entry Form </h3>
+                <h4 align="center"> Employees Payment Entry Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
