--- a/expense_detail/templates/expense_detail/expense_form.html
+++ b/expense_detail/templates/expense_detail/expense_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Expense Details Entry Form </h3>
+                <h4 align="center"> Expense Details Entry Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
