--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_confirm_delete.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_confirm_delete.html
@@ -5,7 +5,15 @@
     <form method="post">
     {% csrf_token %}
 
-        <ul>
+    <div class="row">
+
+            <div class="col-md-4">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -38,6 +46,21 @@
                     <b> Amount Of UPI: </b> <a class="float-right">{{ object.upi }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+            <div class="col-md-4">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Amount Of Credit/Debit Card: </b> <a class="float-right">{{ object.credit_debit_card }}</a>
                     </li>
@@ -66,6 +89,20 @@
                     <b> Loss Of Price in Diesel: </b> <a class="float-right">{{ object.loss_price_diesel }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+    </div>
+
+            <div class="col-md-4">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> Opening Time: </b> <a class="float-right">{{ object.opening_time }}</a>
                     </li>
@@ -90,8 +127,15 @@
                     <b> Closing Of Diesel in Literes: </b> <a class="float-right">{{ object.closing_lit_Diesel }}</a>
                     </li>
 
-        </ul>
+                </ul>
 
+              </div>
+
+            </div>
+    </div>
+
+
+    </div>
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
