--- a/suppliers_master/templates/suppliers_master/suppliers_form.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
             <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title"> Suppliers Entry Form </h3>
+                <h4 align="center"> Suppliers Entry Form </h4>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
