--- a/vehicle_master/templates/vehicle_master/vehicle_confirm_delete.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_confirm_delete.html
@@ -4,8 +4,18 @@
     <hr/>
     <form method="post">
     {% csrf_token %}
-     <ul>
-<li class="list-group-item">
+
+
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
+                    <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
 
@@ -33,7 +43,16 @@
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
-     </ul>
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
+
         <div align="center">
             <input type="submit" value="Delete" class="btn btn-danger">
             <a href="{% url 'rate-view' %}" class="btn btn-info">Cancel </a>
