--- a/vehicle_master/templates/vehicle_master/vehicle_form.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_form.html
@@ -10,7 +10,7 @@
             <!-- general form elements -->
                 <div class="card card-primary">
                 <div class="card-header">
-                <h3 class="card-title" textalign="center"> Creditors Vehicle Entry Form </h3>
+                <h4 align="center"> Creditors Vehicle Entry Form </h4>
               </div>
               <!-- /.card-header -->
 <hr/>
