--- a/expense_detail/templates/expense_detail/expense_detail.html
+++ b/expense_detail/templates/expense_detail/expense_detail.html
@@ -95,5 +95,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'expense_detail-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
 {% endblock %}
 
