--- a/suppliers_master/templates/suppliers_master/suppliers_detail.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_detail.html
@@ -55,5 +55,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'suppliers_master-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
 {% endblock %}
 
