--- a/calculation_master/templates/calculation_master/calculation_detail.html
+++ b/calculation_master/templates/calculation_master/calculation_detail.html
@@ -51,5 +51,10 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'calculation-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
 
