--- a/creditors_master/templates/creditors_master/creditors_detail.html
+++ b/creditors_master/templates/creditors_master/creditors_detail.html
@@ -91,4 +91,9 @@
 
     </div>
 
+
+            <div align="center">
+                 <a href="{% url 'creditors-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
 {% endblock %}
