--- a/creditors_master/templates/creditors_master/creditors_form.html
+++ b/creditors_master/templates/creditors_master/creditors_form.html
@@ -12,7 +12,7 @@
 
                 <!-- /.card-header -->
               <!-- form start -->
-              <div method="post">
+              <form method="post">
 
               {% csrf_token %}
             <!-- /.form group -->
@@ -307,7 +307,7 @@
                   </div>
 
                   </div>
-              </div>
+              </form>
 
 {#                </form>#}
 
