--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
@@ -65,4 +65,8 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'creditor_transaction-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
 {% endblock %}
