--- a/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_detail.html
+++ b/e_dailybase_amount/templates/e_dailybase_amount/dailybase_a_detail.html
@@ -43,4 +43,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'e_dailybase_amount-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
