--- a/employee_master/templates/employee_master/employee_detail.html
+++ b/employee_master/templates/employee_master/employee_detail.html
@@ -162,4 +162,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'employee-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
