--- a/employee_master/templates/employee_master/employee_form.html
+++ b/employee_master/templates/employee_master/employee_form.html
@@ -15,7 +15,7 @@
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form method="POST" enctype="multipart/form-data" >
+              <form method="post" enctype="multipart/form-data" >
               {% csrf_token %}
                 <div class="card-body">
 
@@ -324,9 +324,9 @@
                   <div class="form-group col-lg-3 col-lg-3">
                   <label>Date Of Join</label>
                     <div class="input-group date" id="reservationdate2" data-target-input="nearest">
-                        {% crispy_field form.dob %}
-                        {% if form.dob.errors %}
-                            {% for error in dob.errors %}
+                        {% crispy_field form.Date_of_join %}
+                        {% if form.Date_of_join.errors %}
+                            {% for error in Date_of_join.errors %}
                                 <div class="invalid-feedback">
                                 {{ error }}
                                 </div>
