--- a/employee_payment/templates/employee_payment/employee_p_detail.html
+++ b/employee_payment/templates/employee_payment/employee_p_detail.html
@@ -81,4 +81,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'employee_payment-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
