--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_detail.html
@@ -136,4 +136,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'nozzlle_transaction-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
