--- a/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
+++ b/nozzlle_transaction/templates/nozzlle_transaction/nozzlle_t_form.html
@@ -161,38 +161,77 @@
 
                   </div>
 
+                      <div col-lg-12 col-lg-12 class="row">
 
-                  <div class="row">
+                        <!-- Date and time range -->
+                            <div class="form-group">
+                          <label>Opening Time</label>
 
-                      <div class="form-group col-lg-6 col-lg-6">
-                        <label for="exampleInputDieselrate">Opening Time</label>
-                        <div class="input-group">
-                          {% crispy_field form.opening_time %}
-                            {% if  form.opening_time.errors %}
-                                {% for error in form.opening_time.errors %}
-                                    <div class="invalid-feedback">
-                                        {{ error }}
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="far fa-clock"></i></span>
+                            </div>
+                              {% crispy_field form.opening_time %}
+                                {% if  form.opening_time.errors %}
+                                    {% for error in form.opening_time.errors %}
+                                        <div class="invalid-feedback">
+                                            {{ error }}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                          </div>
+                          <!-- /.input group -->
+                            </div>
+
+{#                      <div class="form-group col-lg-6 col-lg-6">#}
+{#                        <label for="exampleInputDieselrate">Opening Time</label>#}
+{#                        <div class="input-group">#}
+{#                          {% crispy_field form.opening_time %}#}
+{#                            {% if  form.opening_time.errors %}#}
+{#                                {% for error in form.opening_time.errors %}#}
+{#                                    <div class="invalid-feedback">#}
+{#                                        {{ error }}#}
+{#                                    </div>#}
+{#                                {% endfor %}#}
+{#                            {% endif %}#}
+{#                        </div>#}
+{#                      </div>#}
+
+                        <!-- Date and time range -->
+                        <div class="form-group">
+                          <label>Closing Time</label>
+
+                          <div class="input-group">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text"><i class="far fa-clock"></i></span>
+                            </div>
+                              {% crispy_field form.closing_time %}
+                                {% if  form.closing_time.errors %}
+                                    {% for error in form.closing_time.errors %}
+                                        <div class="invalid-feedback">
+                                            {{ error }}
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                          </div>
+                          <!-- /.input group -->
                         </div>
-                      </div>
 
-                      <div class="form-group col-lg-6 col-lg-6">
-                        <label for="exampleInputDieselrate"> Closing Time</label>
-                        <div class="input-group">
-                          {% crispy_field form.closing_time %}
-                            {% if  form.closing_time.errors %}
-                                {% for error in form.closing_time.errors %}
-                                    <div class="invalid-feedback">
-                                        {{ error }}
-                                    </div>
-                                {% endfor %}
-                            {% endif %}
-                        </div>
-                      </div>
+{#                      <div class="form-group col-lg-6 col-lg-6">#}
+{#                        <label for="exampleInputDieselrate"> Closing Time</label>#}
+{#                        <div class="input-group">#}
+{#                          {% crispy_field form.closing_time %}#}
+{#                            {% if  form.closing_time.errors %}#}
+{#                                {% for error in form.closing_time.errors %}#}
+{#                                    <div class="invalid-feedback">#}
+{#                                        {{ error }}#}
+{#                                    </div>#}
+{#                                {% endfor %}#}
+{#                            {% endif %}#}
+{#                        </div>#}
+{#                      </div>#}
 
-                  </div>
+                      </div>
 
                   <div class="row">
 
@@ -395,16 +434,41 @@
     <!-- date-range-picker -->
     <script src="{% static 'plugins/daterangepicker/daterangepicker.js'%}"></script>
     <!-- Tempusdominus Bootstrap 4 -->
-    <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js'%}"></script>
-<script>
-$(function () {
-    <!-- bootstrap color picker -->
-    //Date range picker
-    $('#reservationdate').datetimepicker({
-        format: 'YYYY-MM-DD'
+    <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js'%}">
+
+        <!-- date-range-picker -->
+    <script src="{% static 'plugins/daterangepicker/daterangepicker.js' %}"></script>
+
+    <script src="{%  static 'plugins/bootstrap-material-datetimepicker/js/bootstrap-material-datetimepicker.js'%}"></script>
+
+    </script>
+
+
+    <script>
+    $(function () {
+        <!-- bootstrap color picker -->
+        //Date range picker
+        $('#reservationdate').datetimepicker({
+            format: 'YYYY-MM-DD'
+        });
+
+         //Timepicker//
+        $('#id_opening_time').datetimepicker({
+            format: 'LT'
+        })
+
+             //Timepicker//
+        $('#id_closing_time').datetimepicker({
+            format: 'LT'
+        })
+
+        $('.timepicker').bootstrapMaterialDatePicker({
+        format: 'HH:mm',
+        clearButton: true,
+        date: false
+
     });
-});
-</script>
+    </script>
 
     <script>
           document.addEventListener('DOMContentLoaded',function(){
