--- a/tank_master/templates/tank_master/tank_detail.html
+++ b/tank_master/templates/tank_master/tank_detail.html
@@ -71,4 +71,9 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'rate-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
+
 {% endblock %}
