--- a/vehicle_master/templates/vehicle_master/vehicle_detail.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_detail.html
@@ -51,4 +51,8 @@
 
     </div>
 
+            <div align="center">
+                 <a href="{% url 'vehicle-view' %}" class="btn btn-info"><b>Back</b></a>
+            </div>
+
 {% endblock %}
