--- a/client/templates/client/layout.html
+++ b/client/templates/client/layout.html
@@ -208,13 +208,13 @@
                with font-awesome or any other icon font library -->
 
 
-{#            <li class="nav-item">#}
-{#            <li class="nav-item">#}
-{#                    <a href="{% url 'dashboard' %}" class="nav-link">#}
-{#                      <i class="far fa-circle nav-icon"></i>#}
-{#                      <p>Dashboard</p>#}
-{#                    </a>#}
-{#                  </li>#}
+            <li class="nav-item">
+            <li class="nav-item">
+                    <a href="{% url 'dashboard' %}" class="nav-link">
+                      <i class="nav-icon fas fa-house-user"></i>
+                      <p>Home</p>
+                    </a>
+                  </li>
 
             <li class="nav-item">
             <a href="#" class="nav-link">
